syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "AstroLabProto";

service AstroLabService {
  rpc Authenticate(UserDTO) returns (AuthResponse) {}
  rpc ExecuteCommand(ClientRequest) returns (ServerResponse) {}
}

message UserDTO {
  string login = 1;
  string password = 2;
  string email = 3;
  enum ConnectionType {
    LOGIN = 0;
    REGISTER = 1;
  }
  ConnectionType connection_type = 4;
}

message AuthResponse {
  enum Status {
    OK = 0;
    FORBIDDEN = 1;
    UNAUTHORIZED = 2;
    EXCEPTION = 3;
  }
  Status status = 1;
  string message = 2;
  string token = 3;
}

message Action {
  string command = 1;
  repeated string args = 2;
}

message ClientRequest {
  Action action = 1;
  string token = 2;
}

message ServerResponse {
  enum Status {
    OK = 0;
    ERROR = 1;
    UNAUTHORIZED = 2;
    EXCEPTION = 3;
  }
  Status status = 1;
  string value = 2;
}